# eps_thine

./: README.md
setcover/: CMakeLists.txt  README.md  main.cpp  results.txt  run_tests.py  tests_for_evaluation.txt
setcover/solver/: greedy_solver.cpp  greedy_solver.h  solver.cpp  solver.h
